--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "yarn clean && tsc",
     "test": "jest",
     "doc:generate": "rm -rf docs && typedoc",
-    "release": "yarn build && semantic-release"
+    "release": "yarn build && yarn publish && standard-changelog"
   },
   "jest": {
     "transform": {
@@ -29,29 +29,15 @@
     "testRegex": "^.+\\.spec\\.ts$"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
-    "semantic-release": "^17.0.8",
+    "standard-changelog": "^2.0.24",
     "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.7",
     "typedoc-plugin-markdown": "^2.3.1",
     "typescript": "^3.9.5"
-  },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/git",
-      "@semantic-release/changelog"
-    ],
-    "branches": [
-      "master"
-    ]
   }
 }
