--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "yarn clean && tsc",
     "test": "jest",
     "doc:generate": "rm -rf docs && typedoc",
-    "changelog": "standard-changelog && git add CHANGELOG.md",
+    "changelog": "conventional-changelog-cli && git add CHANGELOG.md",
     "release": "yarn build && yarn publish && yarn changelog"
   },
   "jest": {
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
+    "conventional-changelog-cli": "^2.0.34",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "standard-changelog": "^2.0.24",
@@ -40,5 +41,6 @@
     "typedoc": "^0.17.7",
     "typedoc-plugin-markdown": "^2.3.1",
     "typescript": "^3.9.5"
-  }
+  },
+  "dependencies": {}
 }
