--- a/package.json
+++ b/package.json
@@ -31,17 +31,14 @@
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
-    "conventional-changelog-cli": "^2.0.34",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "standard-version": "^8.0.0",
     "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.7",
     "typedoc-plugin-markdown": "^2.3.1",
     "typescript": "^3.9.5"
   },
-  "dependencies": {
-    "global": "^4.4.0",
-    "standard-version": "^8.0.0"
-  }
+  "dependencies": {}
 }
