--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "yarn clean && tsc",
     "test": "jest",
     "doc:generate": "rm -rf docs && typedoc",
-    "release": "yarn build && yarn publish"
+    "release": "yarn build && yarn standard-version -a",
+    "sv": "standard-version"
   },
   "jest": {
     "transform": {
